# takos-agent

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.reuse/: dep5
scripts/: check-local-engine.sh  live-smoke.sh
src/: control_rpc.rs  engine_support.rs  internal_rpc.rs  lib.rs  main.rs  managed_skills.rs  model.rs  prompt_assets.rs  prompts.rs  skills.rs  tool_bridge.rs
tests/: agent_mock_llm_test.rs
