[package]
name = "takos-agent"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-only"
description = "Agent execution service for Takos"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["json", "macros"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
takos-agent-engine = { path = "../agent-engine" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
