[package]
name = "takos-agent"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-only"
description = "Agent execution service for Takos"

[features]
default = []
# Phase 20E: enable test-only constructors that point the model runner at a
# local HTTP stub server instead of the public OpenAI endpoint. The flag is
# only consumed by `tests/agent_mock_llm_test.rs`; production builds never
# compile the alternate constructor.
mock-llm = []

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["json", "macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
hmac = "0.12.1"
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
takos-agent-engine = { git = "https://github.com/tako0614/takos-agent-engine", rev = "448407aafb346ba8982106540dc87b176e0cf3c3", features = ["openai-embeddings"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
